# polycrypt-rs

./: .cursorignore  .gitignore  Cargo.toml  Makefile  README.md  catalog-info.yaml  tree.txt
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: db_benchmarks.rs  encryption_benchmarks.rs  ffi_benchmarks.rs
db/: README.md
db/setup/: requirements.txt  setup_db.py
docs/: Benchmarking.md  Overview.md  Packaging_and_Distribution.md
examples/: Makefile  go_example.go  go_example_test.go  python_example.py  python_example_test.py
examples/go/: go.mod  go_example.go  go_example_test.go  main_test.go  polycrypt_util.go
examples/go/polycrypt/: polycrypt.go
examples/python/: main.py  polycrypt_util.py  python_example.py  python_example_test.py  test.py
examples/python/polycrypt/: polycrypt.py
polycrypt_ffi_go_python_example/: Makefile  go.mod  go_example.go  python_example.py
src/: error.rs  lib.rs  logger.rs
src/bindings/: ffi.rs  mod.rs
src/crypto/: encryption.rs
tests/: ffi_tests.rs  integration_tests.rs
