[package]
name = "polycrypt-rs"
version = "0.4.3-beta.1"
edition = "2021"
authors = ["Ugochukwu Henry Onwuzurike henryowenzdev@gmail.com"]
description = "A multi-language cryptographic library wrapper"
license = "MIT"

[lib]
name = "polycrypt_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "1.0"
log = "0.4"
serde_json = "1.0"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
rand = "0.8"
chrono = "0.4"
cipher = "0.4"
env_logger = "0.10.0"
base64 = "0.13"

[dev-dependencies]
# env_logger is now in the main dependencies, so you can remove it from here if you want
