[package]
name = "polycrypt-rs"
version = "0.4.5-beta.1"
edition = "2021"
authors = ["Ugochukwu Henry Onwuzurike henryowenzdev@gmail.com"]
description = "A multi-language cryptographic library wrapper"
license = "MIT"

[lib]
name = "polycrypt_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "1.0"
log = "0.4"
serde_json = "1.0"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
rand = "0.8"
chrono = "0.4"
cipher = "0.4"
env_logger = "0.10.0"
base64 = "0.13"
lazy_static = "1.4.0"
rayon = "1.10.0"

[dev-dependencies]
criterion = "0.3"
rusqlite = { version = "0.28.0", features = ["bundled"] }
tempfile = "3.2"
once_cell = "1.8.0"
rand = "0.8"

[[bench]]
name = "ffi_benchmarks"
harness = false

[[bench]]
name = "encryption_benchmarks"
harness = false

[[bench]]
name = "db_benchmarks"
harness = false

[features]
html_reports = ["criterion/html_reports"]

[profile.bench]
debug = true
